--- a/bot_panel/panel/templates/users.html
+++ b/bot_panel/panel/templates/users.html
@@ -6,7 +6,7 @@
 	<div class="col-md-3 col-md-offset-9">
 		<a href="/users/add" class="btn btn-warning btn-lg btn-block">Neuer Benutzer</a>
 	</div>
-	<table class="table table-striped">
+	<table class="table table-hover table-striped">
   	<thead>
 			<tr>
 				<td><strong>Benutzer Nr.</strong></td>
